spacing issues

--- a/css/mobileView.css
+++ b/css/mobileView.css
@@ -3,10 +3,12 @@
 @media screen and (min-width: 0px) and (max-width: 400px) {
   .show-mobile { display: block; }  /* show it on small screens */
   .show-desktop { display: none; }   /* hide it elsewhere */
+  .mobile-offset {margin-left:0%; }
 }
 
 @media screen and (min-width: 401px) {
   .show-mobile { display: none; }   /* hide it elsewhere */
   .show-desktop { display: block; }  /* show it on large screens */
+  .mobile-offset {margin-left:inherit; }
 }
 
